[build-system]
    requires = ["setuptools"]

[project]
    name = "typetest-cli"
    version = "1.1.0"
    authors = [
        {name = "senyc"},
    ]
    description = "Prints an interactable line of text that records speed and accuracy of matching upon completion"
    requires-python = ">=3.8"
    dependencies = [
        "rich",
    ]
[tool.setuptools]
    license-files = ["LICENSE"]
    include-package-data = true

[tool.setuptools.package-data]
    "typetest_cli.text" = ["*.txt"]

[tool.setuptools.packages.find]
    where = ["src"]
[project.scripts]
    typetest = "typetest_cli.typetest:main"

