[build-system]
requires = ["setuptools"]

[project]
name = "typetest-cli"
version = "1.1.1"
authors = [{ name = 'Kyler' }]
description = "Lightweight typing speed commandline tool"
readme = "README.rst"
requires-python = ">=3.8"
dependencies = ["rich"]
keywords = ["speed", "test", "typing", "typetest", "typetest-cli", "terminal"]
classifiers = [
    "Operating System :: POSIX :: Linux",
    "Environment :: Console",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
]

[project.urls]
repository = "https://github.com"

[project.scripts]
typetest = "typetest_cli.typetest:main"
typetest-cli = "typetest_cli.typetest:main"

[tool.setuptools]
license-files = ["LICENSE"]

[tool.setuptools.package-data]
"typetest_cli.text" = ["*.txt"]

[tool.setuptools.packages.find]
where = ["src"]
exclude = ["tests*"]
